# WATonomous-ASD-Assignment

./: README.md
docker/gazebo/: gazeboserver.Dockerfile
docker/robot/: robot.Dockerfile
docker/samples/: cpp_aggregator.Dockerfile  cpp_producer.Dockerfile  cpp_transformer.Dockerfile  py_aggregator.Dockerfile  py_producer.Dockerfile  py_transformer.Dockerfile
docker/vis_tools/: foxglove.Dockerfile
modules/: docker-compose.samples.yaml
src/gazebo/: CMakeLists.txt
src/robot/bringup_robot/launch/: robot.launch.py
src/robot/control/include/: control_node.hpp
src/robot/control/src/: control_node.cpp
src/robot/costmap/include/: costmap_node.hpp
src/robot/map_memory/: CMakeLists.txt
src/robot/planner/: CMakeLists.txt  package.xml
